--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                    <center><img src="./images/logo.png" class="w-13 h-20"></center> 
                     <h1 class="text-2xl font-semibold">Menu</h1>
                     <ul class="mt-4">
-                        <li class="mb-2 px-4"><a href="#Home" class="block hover:text-indigo-400">Home</a></li>
+                        <li class="mb-2 px-4"><a href="#Home" class="block hover:text-indigo-400">Home1</a></li>
                         <li class="mb-2 px-4"><a href="About.html" target=”_blank”  class="block hover:text-indigo-400">About</a></li>
                         <li class="mb-2 px-4"><a href="#Service" class="block hover:text-indigo-400">Services</a></li>
                         <li class="mb-2 px-4"><a href="#Contact" class="block hover:text-indigo-400">Contact</a></li>
